--- a/usipserver/src/main/AndroidManifest.xml
+++ b/usipserver/src/main/AndroidManifest.xml
@@ -1,15 +1,17 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="org.joinsip.usipserver">
+    package="org.org.joinsip.usipserver">
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+
 
     <application>
-        <activity android:name="org.joinsip.usipserver.USipServerActivity">
+        <activity android:name="org.org.joinsip.usipserver.USipServerActivity">
         </activity>
-        <activity android:name="org.joinsip.usipserver.ConfigActivity"/>
-        <service android:name="org.joinsip.usipserver.USipServerService"/>
-        <receiver android:name="org.joinsip.usipserver.BootReceiver">
+        <activity android:name="org.org.joinsip.usipserver.ConfigActivity"/>
+        <service android:name="org.org.joinsip.usipserver.USipServerService"/>
+        <receiver android:name="org.org.joinsip.usipserver.BootReceiver">
         </receiver>
     </application>
 
